force-app/main/default/objects/Defect_Return_Form__c/Defect_Return_Form__c.object-meta.xml
<CustomObject>
    <label>Defect Return Line</label>
    <nameField>
        <label>Defect Return Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Defect Return Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>