force-app/main/default/objects/Defect_Return_Form__c/fields/BP_External_Id__c.field-meta.xml
<CustomField>
    <fullName>BP_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>BP External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>