force-app/main/default/objects/Defect_Return_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Defect_Return</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipName>Defect_Return_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>