force-app/main/default/objects/Defect_Return_Form__c/fields/Contact_Name_BP__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_BP__c</fullName>
    <label>Contact Name (BP)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>