force-app/main/default/objects/Defect_Return_Form__c/fields/Contact_Phone_BP__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_BP__c</fullName>
    <label>Contact Phone (BP)</label>
    <type>Phone</type>
</CustomField>