force-app/main/default/objects/Defect_Return_Form__c/fields/Created_By_User_BP__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_BP__c</fullName>
    <label>Created By User (BP)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>