force-app/main/default/objects/Defect_Return_Form__c/fields/Customer_Account_BP__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_BP__c</fullName>
    <label>Customer Account (BP)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>