force-app/main/default/objects/Defect_Return_Form__c/fields/Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>Defect_Code__c</fullName>
    <label>Defect Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Component Missing (986)</fullName>
            </value>
            <value>
                <fullName>Defective Part (308)</fullName>
            </value>
            <value>
                <fullName>Finish (991)</fullName>
            </value>
            <value>
                <fullName>Leaks (985)</fullName>
            </value>
            <value>
                <fullName>Others (999)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>