force-app/main/default/objects/Defect_Return_Form__c/fields/Description_of_Defect__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Defect__c</fullName>
    <label>Defect Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>