force-app/main/default/objects/Defect_Return_Form__c/fields/Grohe_Fault_Location__c.field-meta.xml
<CustomField>
    <fullName>Grohe_Fault_Location__c</fullName>
    <label>Grohe Fault Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001-body</fullName>
            </value>
            <value>
                <fullName>002-spout/outlet</fullName>
            </value>
            <value>
                <fullName>003-seals</fullName>
            </value>
            <value>
                <fullName>004-tailpipes/inlets/flex hoses</fullName>
            </value>
            <value>
                <fullName>005-remote actuation control/Puck</fullName>
            </value>
            <value>
                <fullName>006-mousseur/sistra</fullName>
            </value>
            <value>
                <fullName>007-fixation set</fullName>
            </value>
            <value>
                <fullName>008-Aqua-Dimmer</fullName>
            </value>
            <value>
                <fullName>009-dirt Strainer</fullName>
            </value>
            <value>
                <fullName>010-headpart</fullName>
            </value>
            <value>
                <fullName>011-diverter</fullName>
            </value>
            <value>
                <fullName>012-handle/lever/button</fullName>
            </value>
            <value>
                <fullName>014-pop-up-waste</fullName>
            </value>
            <value>
                <fullName>015-pop-up-rod/bowden cable</fullName>
            </value>
            <value>
                <fullName>016-seatings</fullName>
            </value>
            <value>
                <fullName>018-cover/rosette</fullName>
            </value>
            <value>
                <fullName>019-installation box in the wall</fullName>
            </value>
            <value>
                <fullName>021-not return valves/vacuum breaker</fullName>
            </value>
            <value>
                <fullName>022-stop valves</fullName>
            </value>
            <value>
                <fullName>023-pressure balance valve</fullName>
            </value>
            <value>
                <fullName>024-thermoelement / thermostat cartridge</fullName>
            </value>
            <value>
                <fullName>030-glass / glass plate / mirror</fullName>
            </value>
            <value>
                <fullName>031-Lights</fullName>
            </value>
            <value>
                <fullName>032-shelves / holders</fullName>
            </value>
            <value>
                <fullName>033-soap dish</fullName>
            </value>
            <value>
                <fullName>043-one hand mixture cartridge</fullName>
            </value>
            <value>
                <fullName>046-temperature limiter</fullName>
            </value>
            <value>
                <fullName>047-snap coupling</fullName>
            </value>
            <value>
                <fullName>050-showers / spray head</fullName>
            </value>
            <value>
                <fullName>052-shower hose / pull out hose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>