force-app/main/default/objects/Defect_Return_Form__c/fields/Grohe_Fault_Type__c.field-meta.xml
<CustomField>
    <fullName>Grohe_Fault_Type__c</fullName>
    <label>Grohe Fault Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00 - No Fault</fullName>
            </value>
            <value>
                <fullName>01 - Surface Finish faults</fullName>
            </value>
            <value>
                <fullName>03 - Incomplete</fullName>
            </value>
            <value>
                <fullName>04 - Breaks/Cracks</fullName>
            </value>
            <value>
                <fullName>05 - Restricted flow / flow Time</fullName>
            </value>
            <value>
                <fullName>06 - Control function faulty</fullName>
            </value>
            <value>
                <fullName>07 - Seized / stiff / jammed</fullName>
            </value>
            <value>
                <fullName>08 - Leakage</fullName>
            </value>
            <value>
                <fullName>09 - Corrosion</fullName>
            </value>
            <value>
                <fullName>11 - Noisy</fullName>
            </value>
            <value>
                <fullName>12 - Packaging and transport damage</fullName>
            </value>
            <value>
                <fullName>13 - Cannot be assembled</fullName>
            </value>
            <value>
                <fullName>14 - Wrong parts supplied</fullName>
            </value>
            <value>
                <fullName>15 - Fault caused by 3rd party</fullName>
            </value>
            <value>
                <fullName>16 - Parameter settings</fullName>
            </value>
            <value>
                <fullName>17 - Electrical faults</fullName>
            </value>
            <value>
                <fullName>18 - Exchanged due to recall</fullName>
            </value>
            <value>
                <fullName>19 - Loose / Not fixable</fullName>
            </value>
            <value>
                <fullName>20 - Clearance</fullName>
            </value>
            <value>
                <fullName>21 - Reaction Time / Response Characteristics</fullName>
            </value>
            <value>
                <fullName>22 - Continuous Flow</fullName>
            </value>
            <value>
                <fullName>23 - Unclear / Cloudy</fullName>
            </value>
            <value>
                <fullName>24 - Synchronization fault</fullName>
            </value>
            <value>
                <fullName>25 - Color Deviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>