force-app/main/default/objects/Defect_Return_Form__c/fields/Inspection_Review__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Review__c</fullName>
    <label>Inspection Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>