force-app/main/default/objects/Defect_Return_Form__c/fields/Invoice_PO__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PO__c</fullName>
    <label>Invoice/PO</label>
    <length>120</length>
    <type>Text</type>
</CustomField>