force-app/main/default/objects/Defect_Return_Form__c/fields/Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This will populated from BP</description>
    <label>Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>