force-app/main/default/objects/Defect_Return_Form__c/fields/Notes_BP__c.field-meta.xml
<CustomField>
    <fullName>Notes_BP__c</fullName>
    <label>Header Notes (BP)</label>
    <type>TextArea</type>
</CustomField>