force-app/main/default/objects/Defect_Return_Form__c/fields/Reference_Number_BP__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_BP__c</fullName>
    <label>Reference Number (BP)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>