force-app/main/default/objects/Defect_Return_Form__c/fields/Rejection_Reason_BP__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_BP__c</fullName>
    <label>Rejection Reason (BP)</label>
    <type>TextArea</type>
</CustomField>