force-app/main/default/objects/Defect_Return_Form__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Request ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>