force-app/main/default/objects/Defect_Return_Form__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Defect_Return_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>