force-app/main/default/objects/Defect_Return_Form__c/fields/Requested_On__c.field-meta.xml
<CustomField>
    <fullName>Requested_On__c</fullName>
    <label>Requested On</label>
    <type>Date</type>
</CustomField>