force-app/main/default/objects/Defect_Return_Form__c/fields/Return_to_State_BP__c.field-meta.xml
<CustomField>
    <fullName>Return_to_State_BP__c</fullName>
    <label>Return to State (BP)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>