force-app/main/default/objects/Defect_Return_Form__c/fields/Return_to_Zip_Code_BP__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Zip_Code_BP__c</fullName>
    <label>Return to Zip Code (BP)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>