force-app/main/default/objects/Defect_Return_Form__c/fields/SAP_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Number__c</fullName>
    <formula>Product__r.SAP_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Product Number</label>
    <type>Text</type>
</CustomField>