force-app/main/default/objects/Defect_Return_Form__c/listViews/Grohe_Goods_Associate_Defect_Return_Form.listView-meta.xml
<ListView>
    <fullName>Grohe_Goods_Associate_Defect_Return_Form</fullName>
    <filterScope>Queue</filterScope>
    <label>Grohe Goods Associate</label>
    <queue>Grohe_Goods_Associate</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>